# psalm

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  Makefile  README  README.md  W_DS_Reif_1.txt  W_DS_Reif_2.txt  W_DS_Reif_3.txt  W_DS_Reif_4.txt  W_DS_Reif_5.txt  catply.pl  density_test.cpp  directed_edge.cpp  directed_edge.h  edge.cpp  edge.h  face.cpp  face.h  hole.cpp  hole.h  libpsalm.cpp  libpsalm.h  libpsalm_test.cpp  mesh.cpp  mesh.h  pline_fill.cpp  pline_pca.m  psalm.cpp  psalm.supp  psalm.txt  sa_test.cpp  subdivision.cpp  subdivision.h  t_edge.cpp  t_edge.h  t_edge_hash.cpp  t_edge_hash.h  t_face.cpp  (+5 more)
FairingAlgorithms/: CMakeLists.txt  CurvatureFlow.cpp  CurvatureFlow.h  FairingAlgorithm.cpp  FairingAlgorithm.h
Meshes/: Dragon_simplified.ply  Dragon_simplified_non_manifold.ply  Hexahedron.ply  Hole_12.ply  Hole_6.ply  Hole_6_noise.ply  Icosahedron.ply  Klein_Bottle.ply  Mushroom.off  Tetrahedron.ply
SegmentationAlgorithms/: CMakeLists.txt  PlanarSegmentation.cpp  PlanarSegmentation.h  SegmentationAlgorithm.cpp  SegmentationAlgorithm.h
SubdivisionAlgorithms/: BsplineSubdivisionAlgorithm.cpp  BsplineSubdivisionAlgorithm.h  CMakeLists.txt  CatmullClark.cpp  CatmullClark.h  DooSabin.cpp  DooSabin.h  Liepa.cpp  Liepa.h  Loop.cpp  Loop.h  SubdivisionAlgorithm.cpp  SubdivisionAlgorithm.h
Tests/: CMakeLists.txt  density_test.cpp
TriangulationAlgorithms/: CMakeLists.txt  MinimumWeightTriangulation.cpp  MinimumWeightTriangulation.h  TriangulationAlgorithm.cpp  TriangulationAlgorithm.h
